# helix-smart-contract

./: .gitignore  .mocharc.json  README.md  addresses.txt  deployment.md  hardhat.config.js  package-lock.json  package.json  solana.md  truffle-config.js
constants/: addresses.js  contracts.js  env.js  initials.js
contracts/: GXOToken.sol
migrations/: 1_initial_migration.js  2_deploy_contracts.js
mocha_tests/: AirDrop.test.ts  AuraFactory.test.ts  AuraLPToken.test.ts  AuraMigrator.test.ts  AuraPair.test.ts  AuraRouter.test.ts  FeeHandler.test.ts  FeeMinter.test.ts  HelixFactory.test.ts  HelixLPToken.test.ts  HelixMigrator.test.ts  HelixPair.test.ts  HelixRouter.test.ts  HelixVault.test.ts  LpSwap.test.ts  MasterChef.test.ts  OracleFactory.test.ts  PublicPresale.test.ts  RefReg.test.ts  SwapFeeRewardsWithAP.test.ts  SwapRewards.test.ts  TokenTools.test.ts  VipPresale.test.ts  YieldSwap.test.ts
scripts/: 0_deploymentHelper.js  10_deployApToken.js  10_deployHpToken.js  10_deploySwapFee.js  10_deploySwapRewards.js  11_deployMigrator.js  11_deploySwapRewards.js  12_deployMigrator.js  12_deployTokenTools.js  15_deployLpSwap.js  (+93 more)
solana/: Cargo.toml  package-lock.json  package.json  program.json
solana/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
solana/src/program-rust/: Cargo.toml
solana/src/program-rust/src/: lib.rs
solana/test/: setup.ts  utils.ts
solana/test/keys/: id.json  program.json  program_pub.json  sender_pub.json
solana_anchor/programs/solana_anchor/: Cargo.toml
solana_anchor/programs/solana_anchor/src/: lib.rs
(+1077 files in other folders)
